# priv-sec-ai-blog

./: .gitignore  README.md
ecg-split-1DCNN-PySyft/: README.md  ecg-split-1DCNN.ipynb  loss_and_acc.csv
what-is-hhe/: CMakeLists.txt  README.md
what-is-hhe/configs/: config.cpp  config.h
what-is-hhe/libs/pasta/: CMakeLists.txt
what-is-hhe/libs/pasta/include/pasta/: pasta.h
what-is-hhe/libs/pasta/src/: pasta.cpp
what-is-hhe/libs/seal/lib/pkgconfig/: seal.pc
what-is-hhe/src/: main.cpp  sealhelper.cpp
what-is-hhe/src/pasta/: SEAL_Cipher.cpp  SEAL_Cipher.h  pasta_3_plain.cpp  pasta_3_plain.h
what-is-hhe/src/utils/: pastahelper.cpp  pastahelper.h  sealhelper.cpp  sealhelper.h  utils.h
